(chore) Add Java 9 exports to fix build.